# spot_gazebo_ros2

./: README.md
champ_bringup/launch/: bringup.launch.py
champ_config/config/gait/: gait.yaml
champ_description/: CMakeLists.txt
champ_description/models/champ/: model.config  model.sdf
champ_description/urdf/: champ.urdf  champ.urdf.xacro  gen_urdf
spot_bringup/: CMakeLists.txt  package.xml
spot_bringup/config/: spot.rviz  spot_bridge.yaml
spot_bringup/launch/: champ.gazebo.launch.py  spot.gazebo.launch.py  spot.launch.py
spot_description/models/spot/: model.sdf  model.urdf
spot_gazebo/worlds/: edgar_mine.sdf  edgar_mine_world.sdf  edgar_mine_world_champ.sdf  exp_room.sdf  simple_tunnel.sdf  simple_tunnel_02.sdf
spot_navigation2/: package.xml  setup.cfg  setup.py
spot_navigation2/config/: mapper_params_online_async.yaml
spot_navigation2/launch/: online_async_launch.py
spot_navigation2/maps/: simple_tunnel.pgm  simple_tunnel.yaml
spot_ros2_description/models/spot/: model.sdf
spot_ros2_gz_controller/spot_ros2_gz_controller/: gait_scheduler.py  leg_controller.py  mpc_controller.py  robot_state.py  spot_controller.py  swing_trajectory.py
